--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@craco/craco": "^6.1.2",
     "@headlessui/react": "^1.1.1",
     "@reduxjs/toolkit": "^1.5.1",
+    "@tailwindcss/forms": "^0.3.2",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.8",
