--- a/.github/workflows/autodeploy.yml
+++ b/.github/workflows/autodeploy.yml
@@ -1,9 +1,9 @@
 name: Auto Deploy
 on:
   push:
-    branches: [master] # run on pushes to master
+    branches: [master, main] # run on pushes to master
 jobs:
-  build-and-test:
+  build:
     name: Running on Node ${{ matrix.node }} and ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
 
@@ -24,7 +24,6 @@ jobs:
           restore-keys: ${{ runner.os }}-node-
       - run: npm ci # install dependencies
       - run: npm run build --if-present # build the project
-      - run: npm run test:unit # run the tests
       # deploy site to netlify using secrets created on repository
       - uses: netlify/actions/cli@master 
         env:
