--- a/.github/workflows/autodeploy.yml
+++ b/.github/workflows/autodeploy.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         node: [ '12.x', '14.x' ]
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2 # setup the repository in the runner
       - name: Setup Node.js # setup Node.js in the runner
