--- a/.github/workflows/autodeploy.yml
+++ b/.github/workflows/autodeploy.yml
@@ -3,7 +3,7 @@ on:
   workflow_run:
     workflows: ["Lint Action"]
     types:
-      - [completed]
+      - completed
 jobs:
   build:
     name: Running on Node ${{ matrix.node }} and ${{ matrix.os }}
@@ -15,7 +15,7 @@ jobs:
         os: [ubuntu-latest]
 
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    
+
     steps:
       - uses: actions/checkout@v2 # setup the repository in the runner
       - name: Setup Node.js # setup Node.js in the runner
