--- a/.github/workflows/autodeploy.yml
+++ b/.github/workflows/autodeploy.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        node: [ '12.x', '14.x' ]
+        node: [ '14.x' ]
         os: [ubuntu-latest]
 
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
@@ -35,5 +35,4 @@ jobs:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         with:
-          args: deploy --dir=build --functions=functions --prod
-          secrets: '["NETLIFY_AUTH_TOKEN", "NETLIFY_SITE_ID"]'
+          args: deploy --dir=build --functions=functions --prod -m 'v${{ steps.package-version.outputs.current-version}} ・ ${{ github.head_ref }}'
